--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: crenal-dashboard    # <— sin el doble “b”
+    name: crenal-dashboard
     env: python
     buildCommand: |
       pip install --upgrade pip
@@ -9,6 +9,6 @@ services:
       streamlit run app.py --server.port $PORT --server.address 0.0.0.0
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11
+        value: 3.11.9   # <= aquí el fix (usa 3 números)
       - key: STREAMLIT_SERVER_HEADLESS
         value: "true"
